# masters-code

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CelebA.ipynb  PrivacyFairnessMNIST.ipynb  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
code/: algorithms.py  training.py  utils.py
docs/: conf.py  index.rst
docs/algorithms/: adaptiveclipping.rst  index.rst  weighteddpsgd.rst
docs/reference/: index.rst
notebooks/: Cardio.ipynb  CelebA.ipynb  Census.ipynb  PrivacyFairnessMNIST.ipynb
src/: algorithms.py  training.py  utils.py
src/prifair/: __init__.py  _pate_analysis.py  algorithms.py  core.py  data.py  optimizers.py  training.py  utils.py
src/prifair/pate/: core.py  smoothed_sensitivity.py
tests/: test_training.py
