[metadata]
name = prifair
author = Aahil Mehta
author_email = am11218@ic.ac.uk
maintainer = Aahil Mehta
description = A library of tools for training private and fair machine learning models.
license = 'MIT'
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hilly12/prifair
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    torch
    torchvision
    opacus==1.1.1
    tqdm

[options.packages.find]
where = src

[options.extras_require]
dev =
    pre-commit
    pylint
    black

[flake8]
max-line-length = 100
extend-ignore = E203, W503

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 100
